GCP_personal_project/terraform-source-code/5_kubernetes/deployment/services/bts-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bts-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "bts-global-ingress"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bts-web-service
            port:
              number: 80
